Import of SHARYANTO/App-HasPrereqs-0.02 from CPAN.
gitpan-cpan-distribution: App-HasPrereqs
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SHARYANTO/App-HasPrereqs-0.02.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-HasPrereqs
 
+0.02    2012-08-28 (SHARYANTO)
+
+        Return detailed data, for scriptability.
+
+
 0.01    2012-08-28 (SHARYANTO)
 
         First release.
