Import of SHARYANTO/App-HasPrereqs-0.03 from CPAN.
gitpan-cpan-distribution: App-HasPrereqs
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SHARYANTO/App-HasPrereqs-0.03.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,18 +3,23 @@ NAME
     in dist.ini
 
 VERSION
-    version 0.02
+    version 0.03
 
 SYNOPSIS
      # Use via has-prereqs CLI script
 
+DESCRIPTION
+    This module has Rinci metadata.
+
 FUNCTIONS
+    None are exported by default, but they are exportable.
+
   has_prereqs(%args) -> [status, msg, result, meta]
     Check whether your Perl installation has prerequisites in dist.ini.
 
     Arguments ('*' denotes required arguments):
 
-    *   library* => *array*
+    *   library => *array*
 
         Add directory to @INC.
 
