--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-HasPrereqs
 
+0.03    2012-08-29 (SHARYANTO)
+
+        Return version information (has_version and needed_version) in result.
+
+
 0.02    2012-08-28 (SHARYANTO)
 
         Return detailed data, for scriptability.
