Import of SHARYANTO/App-HasPrereqs-0.04 from CPAN.
gitpan-cpan-distribution: App-HasPrereqs
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SHARYANTO/App-HasPrereqs-0.04.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,17 +3,13 @@ NAME
     in dist.ini
 
 VERSION
-    version 0.03
+    This document describes version 0.04 of App::HasPrereqs (from Perl
+    distribution App-HasPrereqs), released on 2014-07-22.
 
 SYNOPSIS
      # Use via has-prereqs CLI script
 
-DESCRIPTION
-    This module has Rinci metadata.
-
 FUNCTIONS
-    None are exported by default, but they are exportable.
-
   has_prereqs(%args) -> [status, msg, result, meta]
     Check whether your Perl installation has prerequisites in dist.ini.
 
@@ -25,18 +21,37 @@ FUNCTIONS
 
     Return value:
 
-    Returns an enveloped result (an array). First element (status) is an
-    integer containing HTTP status code (200 means OK, 4xx caller error, 5xx
-    function error). Second element (msg) is a string containing error
-    message, or 'OK' if status is 200. Third element (result) is optional,
-    the actual result. Fourth element (meta) is called result metadata and
-    is optional, a hash that contains extra information.
+    Returns an enveloped result (an array).
+
+    First element (status) is an integer containing HTTP status code (200
+    means OK, 4xx caller error, 5xx function error). Second element (msg) is
+    a string containing error message, or 'OK' if status is 200. Third
+    element (result) is optional, the actual result. Fourth element (meta)
+    is called result metadata and is optional, a hash that contains extra
+    information.
+
+     (any)
+
+HOMEPAGE
+    Please visit the project's homepage at
+    <https://metacpan.org/release/App-HasPrereqs>.
+
+SOURCE
+    Source repository is at
+    <https://github.com/sharyanto/perl-App-HasPrereqs>.
+
+BUGS
+    Please report any bugs or feature requests on the bugtracker website
+    <https://rt.cpan.org/Public/Dist/Display.html?Name=App-HasPrereqs>
+
+    When submitting a bug or request, please include a test-file or a patch
+    to an existing test-file that illustrates the bug or desired feature.
 
 AUTHOR
     Steven Haryanto <stevenharyanto@gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2012 by Steven Haryanto.
+    This software is copyright (c) 2014 by Steven Haryanto.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
