--- a/Changes
+++ b/Changes
@@ -1,15 +1,23 @@
 Revision history for App-HasPrereqs
 
+0.04     2014-07-22 (SHARYANTO)
+
+         - No functional changes.
+
+         - Switch CLI scripts from using Perinci::CmdLine to
+           Perinci::CmdLine::Any to reduce size of dependencies.
+
+
 0.03    2012-08-29 (SHARYANTO)
 
-        Return version information (has_version and needed_version) in result.
+        - Return version information (has_version and needed_version) in result.
 
 
 0.02    2012-08-28 (SHARYANTO)
 
-        Return detailed data, for scriptability.
+        - Return detailed data, for scriptability.
 
 
 0.01    2012-08-28 (SHARYANTO)
 
-        First release.
+        - First release.
